[package]
name = "telwrap"
authors = ["Dagan Martinez"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "process", "io-util", "net", "fs"] }
tokio-stream = "0.1.11"
bytes = "1.3.0"
nix = "0.26.1"

[dependencies.telly]
path = "telly"
